lecture 10 en: correct typo Convetion to Convention
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/10-call/apo-lecture10-call-en.tex
+++ b/10-call/apo-lecture10-call-en.tex
@@ -132,10 +132,10 @@ The application binary interface (ABI) of caller and callee must match to allow 
 \end{itemize}
 \end{frame}
 
-\section{RISC-V Calling Convetion -- Defined by ABI}
+\section{RISC-V Calling Convention -- Defined by ABI}
 
 \begin{frame}[fragile]
-\frametitle{RISC-V Calling Convetion -- Defined by ABI}
+\frametitle{RISC-V Calling Convention -- Defined by ABI}
 
 \begin{itemize}
  \item Parameter values are stored to registers \texttt{a0}, ... , \texttt{a7}
@@ -367,7 +367,7 @@ tp & x4 & thread pointer/thread local store & -- --\\\hline
 
 
 \begin{frame}
-\frametitle{32-bit RISC-V Calling Convetion -- Argument Type Rules}
+\frametitle{32-bit RISC-V Calling Convention -- Argument Type Rules}
 
 \begin{itemize}
  \item char, short, int, long, float, pointer -- each argument in single register
