lecture 11 en: fix untranslated line
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/11-architekturax86/apo-lecture11-x86-en.tex
+++ b/11-architekturax86/apo-lecture11-x86-en.tex
@@ -18,7 +18,7 @@
 \frametitle{Processor -- CPU}
 \begin{columns}[t,onlytextwidth]
 \begin{column}{0.4\textwidth}
-Základní vlastnosti:
+Basic features:
   \begin{itemize}
     \item data and address bus width
     \item number and size of internal registers
