lecture 09 cz: corrected typo reported by Tereza Navrátilová
Closes #80

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/09-irq-events/apo-lecture09-irq-events-cz.tex
+++ b/09-irq-events/apo-lecture09-irq-events-cz.tex
@@ -157,7 +157,7 @@ přístupné na vstupním portu a dalších senzorech
  \end{itemize}
 \end{itemize}
 \begin{itemize}
- \item Pouze výstupné periferií
+ \item Pouze výstupní periferie
  \begin{itemize}
   \item video výstup (2D, 3D + akcelerace), audio výstup
   \item výstupy s fyzickým efektem, 3D tiskárna (rychlé prototypování),
