lecture 10 cz: fix typo reported by Vojtěch Beneš
Closes #76

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/10-call/apo-lecture10-call-cz.tex
+++ b/10-call/apo-lecture10-call-cz.tex
@@ -131,7 +131,7 @@ Volající (caller) a volaný (callee) se musí dohodnout na těchto otázkách,
 \end{itemize}
 \end{frame}
 
-\section{Konvence volání funkce pr RISC-V}
+\section{Konvence volání funkce pro RISC-V}
 
 \begin{frame}[fragile]
 \frametitle{Konvence volání funkce pro RISC-V}
