lecture 10 cz: fix typo reported by Tereza Navrátilová
Closes #81

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/10-call/apo-lecture10-call-cz.tex
+++ b/10-call/apo-lecture10-call-cz.tex
@@ -115,7 +115,7 @@ cond_1:
 
 
 \begin{frame}
-\frametitle{Jak se přeložit funkci?}
+\frametitle{Jak se přeloží funkce?}
 
 Pro překlad funkce např. \texttt{int secti(int a, int b);} je nutné vymyslet:
 \begin{itemize}
@@ -127,7 +127,7 @@ Pro překlad funkce např. \texttt{int secti(int a, int b);} je nutné vymyslet:
 Volající (caller) a volaný (callee) se musí dohodnout na těchto otázkách, aby si rozuměli.
 \begin{itemize}
  \item Překlad volaného může být na jiném počítači, jiným překladačem (typicky knihovny) než překlad volajícího - Vaším překladačem na Vašem počítači.
- \item Je nutné definovat konvenci, typ konvence volání funkce musí být v hlavičce objektových souborů (a tím i knohoven) aby zajistila správnost předání dat a získání návratové hodnoty funkce.
+ \item Je nutné definovat konvenci, typ konvence volání funkce musí být v hlavičce objektových souborů (a tím i knihoven) aby zajistila správnost předání dat a získání návratové hodnoty funkce.
 \end{itemize}
 \end{frame}
 
