lecture 09 cz: fix typo reported by Alina Haitota
Closes #73

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/09-irq-events/apo-lecture09-irq-events-cz.tex
+++ b/09-irq-events/apo-lecture09-irq-events-cz.tex
@@ -53,7 +53,7 @@
 \begin{itemize}
  \item Zábava
  \begin{itemize}
-  \item histricky první sekvenční stroje, automatofon - hrací skříňky, hodiny, orloje, mechanismus z Antikythéry již 150 př. n. l.
+  \item historicky první sekvenční stroje, automatofon - hrací skříňky, hodiny, orloje, mechanismus z Antikythéry již 150 př. n. l.
   \item dnes hrací automaty, herní konzole, simulátory, multimédia
  \end{itemize}
  \item Výdělečná zaneprázdněnost/aktivity (busyness)
