lecture 01, 02, 03, 04 and 11 en: corrected typos reported by Berinde Codrin
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/01-intro/apo-lecture01-intro-en.tex
+++ b/01-intro/apo-lecture01-intro-en.tex
@@ -731,7 +731,7 @@ What is the speed of Ripple Carry Adder?
 \item We can define two basic functions:
 \begin{itemize}
 \item Carry generate -- case $A_i=1$ and $B_i=1$ implicates $C_{i+1}=1$ -- carry is generated $G_i=A_i \land B_i$ 
-\item carry propagate -- case $A_i=1$ or $B_i=1$ implicates $C_{i+1}=C_{i}$ -- carry will be propagated, of there is carry in the lower bit; $P_i=A_i$ xor $B_i$ 
+\item carry propagate -- case $A_i=1$ or $B_i=1$ implicates $C_{i+1}=C_{i}$ -- carry will be propagated, if there is carry in the lower bit; $P_i=A_i$ xor $B_i$ 
 \end{itemize}
 \item For 4-bit input:
 \begin{itemize}
