--- a/07-io/apo-lecture07-io-en.tex
+++ b/07-io/apo-lecture07-io-en.tex
@@ -696,7 +696,7 @@ Most peripherals are connected via PCI-Express and USB.
 \begin{frame}
 \frametitle{Peripheral Component Interconnect Standard Bus -- PCI}
 
-The all state changes and signal srobes are controlled by clock edges.
+The all state changes and signal strobes are controlled by clock edges.
 
 For proper operation, it needs to be synchronized as precisely as possible to the transmitted clock.
 
@@ -912,7 +912,7 @@ Quiz: How many different 10-bit numbers are there that have five 0s and five 1s?
 \item This extends to ${10 \choose 5} + 2\cdot {10 \choose 6}= 672$ of such 10-bit numbers
 \item We choose those codes where are more 1 $\rightarrow$ 0 and 0 $\rightarrow$ 1 transitions.
 \end{itemize}
-\item For codes where cound of 0s and 1s differs (by one only), there is freedom whether code with more 1s or matching complement with more 0s is chosen
+\item For codes where count of 0s and 1s differs (by one only), there is freedom whether code with more 1s or matching complement with more 0s is chosen
 \end{itemize}
 
 \bigskip
